# docs/swagger.yaml
@@ -259,6 +259,10 @@ definitions:
         type: string
       payment_date:
         type: string
+      tag_ids:
+        items:
+          type: string
+        type: array
       tenant_id:
         type: string
       to_account_id:
